checker.css
body {
  font-family: "Press Start 2P", cursive;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: stretch;
  height: 100vh;
  background-color: #000;
  color: #fff;
}

.checkContainer {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-items: center;
  align-items: center;
}

.container {
  text-align: center;
  padding: 20px;
  border-radius: 20px;
  background-color: #000;
  height: fit-content;
  width: fit-content;
  margin-inline: auto;
  margin-block: auto;
  margin-top: 0;
}

.container h2 {
  font-size: 32px;
  margin-bottom: 12px;
}

@keyframes glow {
  0% {
    border-color: #fff;
    box-shadow: 0 0 20px #fff;
  }
  100% {
    border-color: #fff;
    box-shadow: 0 0 40px #fff;
  }
}

input[type="text"] {
  padding: 8px;
  width: 300px;
  margin-bottom: 10px;
  border: 2px solid #fff;
  border-radius: 4px;
  font-size: 16px;
  background-color: #222;
  color: #fff;
}

button {
  padding: 8px 16px;
  background-color: #000;
  color: #fff;
  border: 2px solid #fff;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  text-transform: uppercase;
  transition: all 0.3s ease;
}

button:hover {
  background-color: #fff;
  color: #000;
}

#result {
  margin-top: 20px;
  font-size: 18px;
}

@media screen and (max-width: 600px) {
  .container {
    margin-inline: 16px;
  }
}

